# itn-uk

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/scripts/: check_cpp_parity.py
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/cmake/: FindOpenFST.cmake  ukr_itnConfig.cmake.in
cpp/include/ukr_itn/: ukr_itn.h
cpp/src/: ukr_itn.cc
cpp/tests/: ukr_itn_test.cc
cpp/tools/: ukr_itn_main.cc
tests/: test_address.py  test_api.py  test_century.py  test_code.py  test_date.py  test_decimal.py  test_duration.py  test_electronic.py  test_fraction.py  test_measure.py  test_money.py  test_number_sign.py  test_punctuation.py  test_range.py  test_references.py  test_telephone.py  test_time.py  test_whitelist.py  test_word.py
ukr/: __init__.py  __main__.py  export.py  graph_utils.py  utils.py  wfst.py
ukr/data/: measurements.tsv  month.tsv  whitelist.tsv
ukr/data/address/: apartment.tsv  building.tsv  house.tsv  street.tsv
ukr/data/currency/: currency_major.tsv  currency_minor.tsv
ukr/data/electronic/: providers.tsv  symbols.tsv  tlds.tsv
ukr/data/numbers/fraction/: denominator_digit_pl.tsv  denominator_digit_sg.tsv  denominator_teen_pl.tsv  denominator_teen_sg.tsv  denominator_ties_pl.tsv  denominator_ties_sg.tsv
ukr/taggers/: address.py  cardinal.py  century.py  code.py  date.py  decade.py  decimal.py  duration.py  electronic.py  fraction.py  ip.py  legal.py  measure.py  money.py  number_sign.py  ordinal.py  range.py  score.py  telephone.py  time.py  tokenize_and_classify.py  version.py  whitelist.py  word.py
ukr/verbalizers/: cardinal.py  date.py  decimal.py  electronic.py  fraction.py  measure.py  money.py  ordinal.py  telephone.py  time.py  verbalize.py  verbalize_final.py  whitelist.py  word.py
